ref #6981 upgrade cdmlib-persistence java8->java11